# agentfw-rs

./: .gitignore  Cargo.toml  README.en.md  README.md
crates/agentfw-core/: Cargo.toml
crates/agentfw-core/src/: agent.rs  anthropic_messages.rs  builtin_tools.rs  config.rs  default_drivers.rs  driver.rs  error.rs  http_client.rs  kernel.rs  lib.rs  message.rs  model.rs  openai_compatible.rs  openai_responses.rs  protocol.rs  resolver.rs  runtime.rs  state.rs  storage.rs  tool.rs
docs/: api-overview.md  config-boundary.md  driver-boundary.md  public-api.md  runtime-boundary.md  rust-interfaces.md  state-storage-boundary.md
examples/history_transform/: Cargo.toml
examples/history_transform/src/: main.rs
examples/minimal/: Cargo.toml
examples/minimal/src/: main.rs
examples/multi_agent_static/: Cargo.toml
examples/multi_agent_static/src/: main.rs
examples/three_agent_visibility/: Cargo.toml
examples/three_agent_visibility/src/: main.rs
