[package]
name = "agentfw-core"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
async-stream.workspace = true
async-trait.workspace = true
futures = "0.3"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { version = "1", features = ["macros", "rt"] }
toml = "0.8"
